--- a/buoi_hoc_2/thuc_hanh/form.html
+++ b/buoi_hoc_2/thuc_hanh/form.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>form</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <form>
-        <h2>đăng nhập</h2>
-        <label for="login-id">Tên đăng nhập</label>
-        <input type="text" id="login-id" />
-        <br />
-        <br />
-        <label for="pass-id">Mật khẩu:</label>
-        <input type="text" id="pass-id" />
-        <br />
-        <br />
-        <button>Đăng nhập</button>
+      <h2>đăng nhập</h2>
+      <label for="login-id">Tên đăng nhập</label>
+      <input type="text" id="login-id" />
+      <br />
+      <br />
+      <label for="pass-id">Mật khẩu:</label>
+      <input type="text" id="pass-id" />
+      <br />
+      <br />
+      <button>Đăng nhập</button>
     </form>
-</body>
-
+  </body>
+  fdgf
 </html>
