--- a/buoi_hoc_2/btvn/bt1.html
+++ b/buoi_hoc_2/btvn/bt1.html
@@ -11,7 +11,7 @@
             background-color: navy;
             padding: 30px;
             color: white;
-            text-transform: uppercase;
+            text-transform: capitalize;
         }
         
         h1 {
