--- a/buoi_hoc_2/btvn/bt1.html
+++ b/buoi_hoc_2/btvn/bt1.html
@@ -10,7 +10,7 @@
         background-color: navy;
         padding: 30px;
         color: white;
-        text-transform: capitalize;
+        text-transform: uppercase;
       }
 
       h1 {
