--- a/buoi_hoc_2/btvn/bt2.html
+++ b/buoi_hoc_2/btvn/bt2.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8" />
     <title>Form đăng ký</title>
     <style>
       form {
