--- a/thuchanh/tuan1/th1.html
+++ b/thuchanh/tuan1/th1.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Excercise</title>
+    <title>Bài 1</title>
   </head>
 
   <body>
     <header>
-      <nav style="background-color: aquamarine; margin-top: 10px">
-        <a href="#" style="margin-right: 10px">Trang chủ</a>
-        <a href="#" style="margin-right: 10px">Chủ đề</a>
-        <a href="#" style="margin-right: 10px">Bài đăng mới nhất</a>
-        <a href="#" style="margin-right: 10px">Liên hệ</a>
+      <nav style="background-color: aquamarine">
+        <a href="#" style="margin-right: 16px">Trang chủ</a>
+        <a href="#" style="margin-right: 16px">Chủ đề</a>
+        <a href="#" style="margin-right: 16px">Bài đăng mới nhất</a>
+        <a href="#" style="margin-right: 16px">Liên hệ</a>
       </nav>
     </header>
     <main>
@@ -26,27 +26,29 @@
           án
         </p>
         <img
-          src="https://media.techmaster.vn/api/static/c2m5ou451cob24f6skeg/c3bg23451co34cg0jgt0"
+          src="img/react.jpeg"
           alt="ảnh của techmaster"
-          height="400px;"
+          style="height: 300px"
         />
         <h2>1.react-select</h2>
-        <i
-          >Một sự thay thế tuyệt vời cho Component Chọn trong
-          <b>React.js</b>.</i
-        >
+        <p>
+          <i
+            >Một sự thay thế tuyệt vời cho Component Chọn trong
+            <b>React.js</b></i
+          >.
+        </p>
         <p>
           Trình bày một cách hoàn toàn mới để phát triển các thành phần React.js
           mạnh mẽ, vừa hoạt động hiệu quả vừa có thể tùy chỉnh hoàn toàn.
         </p>
-        <p><strong>Các tính năng nổi bật</strong></p>
+        <strong>Các tính năng nổi bật</strong>
         <ul>
           <li>
             Cách tiếp cận dữ liệu linh hoạt, với các chức năng có thể tùy chỉnh.
           </li>
           <li>
-            <b>API</b> tạo kiểu có thể mở rộng với Emotion ( Một thư viện
-            javascript được thiết kế cho kiểu <b>CSS</b> viết ).
+            <b>API</b> tạo kiểu có thể mở rộng với <b>Emotion </b> ( Một thư
+            viện javascript được thiết kế cho kiểu <b>CSS</b> viết ).
           </li>
           <li>
             API chèn thành phần để kiểm soát hoàn toàn đối với hành vi giao diện
@@ -56,19 +58,16 @@
             Nhóm tùy chọn, hỗ trợ cổng thông tin, hoạt ảnh và hơn thế nữa.
           </li>
         </ul>
-
-        <p>
-          Để cài đặt:
-          <i><b>npm i react-select</b></i>
-        </p>
+        <p>Để cài đặt:</p>
+        <i><b>npm i react-select</b></i>
         <h2>2. react-dnd</h2>
-        <em>Drap and Drop for React</em>
+        <i>Drap and Drop for React</i>
         <p>
           Một tập hợp các tiện ích React để giúp bạn xây dựng các giao diện kéo
           và thả phức tạp trong khi vẫn tách rời các thành phần.
         </p>
-        <p><strong>Các tính năng nổi bật</strong></p>
-        <ol>
+        <strong>Các tính năng nổi bật</strong>
+        <ul>
           <li>
             Hoàn hảo cho các ứng dụng như Trello và Storify, nơi kéo chịu trách
             nhiệm chuyển dữ liệu giữa các phần khác nhau của ứng dụng.
@@ -78,26 +77,19 @@
             React DnD sử dụng dữ liệu chứ không phải xem quảng cáo là nguồn sự
             thật.
           </li>
-        </ol>
-
-        <p>
-          Để cài đặt:
-          <i><strong>npm i react-dnd</strong></i>
-        </p>
+        </ul>
+        <p>Để cài đặt:</p>
+        <i><b>npm i react-dnd</b></i>
       </article>
+      <hr />
+      <aside>
+        <img src="img/62.jpg" alt="ảnh của techmaster" />
+        <h3>John</h3>
+        <ul>
+          <li>Số bài viết: 120 bài</li>
+          <li>Lượt thích: 999 likes</li>
+        </ul>
+      </aside>
     </main>
-
-    <hr />
-    <aside>
-      <img
-        src="https://randomuser.me/api/portraits/men/62.jpg"
-        alt="ảnh của techmaster"
-      />
-      <h3>John</h3>
-      <ul>
-        <li>Số bài viết: 120 bài</li>
-        <li>Lượt thích: 999 likes</li>
-      </ul>
-    </aside>
   </body>
 </html>
