--- a/thuchanh/tuan1/th1.html
+++ b/thuchanh/tuan1/th1.html
@@ -90,6 +90,17 @@
           <li>Lượt thích: 999 likes</li>
         </ul>
       </aside>
+      <hr />
+      <section style="background-color: aquamarine">
+        <h2>Đăng ký để nhận bài blogs mới nhất</h2>
+
+        <label for="email">Email của bạn:</label>
+        <input type="text" id="email" /><br /><br />
+        <input type="checkbox" id="notice" />
+        <label for="notice">Nhận thông báo quảng cáo từ chúng tôi</label
+        ><br /><br />
+        <input type="submit" value="đăng ký" />
+      </section>
     </main>
   </body>
 </html>
