--- a/buoi_hoc_2/btvn/bt2.html
+++ b/buoi_hoc_2/btvn/bt2.html
@@ -4,6 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="UTF-8" />
     <title>Form đăng ký</title>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://png.pngtree.com/png-clipart/20190520/original/pngtree-youtube-subscribe-round-icon-attractive-button-png-image_4121856.jpg"
+    />
     <style>
       form {
         background-color: #f2f2f2;
@@ -15,8 +20,8 @@
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
       }
 
-      input[type="text"],
-      input[type="password"] {
+      input[type="text "],
+      input[type="password "] {
         width: 100%;
         padding: 12px 20px;
         margin: 8px 0;
@@ -77,31 +82,31 @@
   <body>
     <form>
       <h2>Đăng ký tài khoản</h2>
-      <label for="username">Tên đăng nhập</label>
+      <label for="username ">Tên đăng nhập</label>
       <input
-        type="text"
-        id="username"
-        name="username"
-        placeholder="Tên đăng nhập của bạn.."
+        type="text "
+        id="username "
+        name="username "
+        placeholder="Tên đăng nhập của bạn.. "
       />
 
-      <label for="password">Mật khẩu</label>
+      <label for="password ">Mật khẩu</label>
       <input
-        type="password"
-        id="password"
-        name="password"
-        placeholder="Mật khẩu của bạn.."
+        type="password "
+        id="password "
+        name="password "
+        placeholder="Mật khẩu của bạn.. "
       />
 
-      <label for="email">Email</label>
+      <label for="email ">Email</label>
       <input
-        type="text"
-        id="email"
-        name="email"
-        placeholder="Email của bạn.."
+        type="text "
+        id="email "
+        name="email "
+        placeholder="Email của bạn.. "
       />
 
-      <button type="submit">Đăng ký</button>
+      <button type="submit ">Đăng ký</button>
     </form>
     <br /><br /><br />
 
